# Alert

./: .gitignore  CMakeLists.txt  README.md
FAST_LIO/: CMakeLists.txt  README.md
FAST_LIO/Log/: dbg.txt  mat_out.txt  mat_pre.txt  pos_log.txt
FAST_LIO/config/: avia.yaml  mid360_real.yaml  mid360_tracked.yaml  ntu_viral.yaml  ouster64.yaml  ouster64_mcd_origi.yaml  ouster64_mcd_outimu.yaml  velodyne.yaml  velodyne_m2dgr.yaml
FAST_LIO/include/IKFoM_toolkit/esekfom/: esekfom.hpp
FAST_LIO/launch/: gdb_debug_example.launch  mapping_avia.launch  mapping_horizon.launch  mapping_mid360.launch  mapping_mid360_real.launch  mapping_ouster64.launch  mapping_velodyne.launch  run_ntuviral.launch
FAST_LIO/msg/: LioOdomCov.msg
FAST_LIO/rviz_cfg/: loam_livox.rviz
FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp
analysis_script/: ablation_analysis.py  analyze_fp_burden.py  common.py  compare_ablation.py  compute_mdd.py  compute_metrics.py  compute_runtime.py  gen_system_overview.py  plot_common.py  plot_epsilon_boxplot.py  plot_real_timeline.py  plot_run004_timeline.py  plot_run004_timeline_noword.py  plot_sim_timeline.py  run_simulation_paper_analysis.py
analysis_script/test/: test_plot_epsilon_boxplot.py  test_plot_real_timeline.py  test_plot_run004_timeline_noword.py  test_plot_scripts.py  test_public_repo_paths.py  test_simulation_paper_analysis.py
deform_monitor_v2/: CMakeLists.txt  package.xml  readme.md
deform_monitor_v2/config/: deform_monitor_v2.yaml  deform_monitor_v2_real.yaml  deform_monitor_v2_sim.yaml  deform_monitor_v2_sim_dynamic.yaml  sim_experiment_recorder.yaml
deform_monitor_v2/include/deform_monitor_v2/: data_types.hpp  deform_monitor_v2_node.hpp  risk_visualization_publisher.hpp  structure_unit_builder.hpp  structure_unit_tracker.hpp  structure_visualization_publisher.hpp  visualization_publisher.hpp
deform_monitor_v2/include/deform_monitor_v2/core/: anchor_builder.hpp  covariance_extractor.hpp  current_observation_extractor.hpp  imm_information_filter.hpp  motion_clusterer.hpp  persistent_risk_region_tracker.hpp  reference_manager.hpp  region_correspondence_solver.hpp  region_hypothesis_builder.hpp  risk_evidence_adapter.hpp  risk_field_builder.hpp  scalar_measurement_builder.hpp
deform_monitor_v2/launch/: deform_monitor_v2.launch  deform_monitor_v2_real.launch  deform_monitor_v2_sim.launch  deform_monitor_v2_sim_dynamic.launch
deform_monitor_v2/msg/: AnchorState.msg  AnchorStates.msg  MotionCluster.msg  MotionClusters.msg  PersistentRiskRegion.msg  PersistentRiskRegions.msg  RiskEvidence.msg  RiskEvidenceArray.msg  RiskRegion.msg  RiskRegions.msg  RiskVoxel.msg  RiskVoxelField.msg  StructureMotion.msg  StructureMotions.msg
deform_monitor_v2/scripts/: analyze_sim_run.py  export_evo_report.py  real_experiment_recorder.py  sim_experiment_recorder.py  sim_truth_rviz_bridge.py
deform_monitor_v2/src/: data_types.cpp  deform_monitor_v2_main.cpp  deform_monitor_v2_node.cpp  risk_visualization_publisher.cpp  structure_visualization_publisher.cpp  visualization_publisher.cpp
deform_monitor_v2/src/core/: anchor_builder.cpp  covariance_extractor.cpp  current_observation_extractor.cpp  imm_information_filter.cpp  motion_clusterer.cpp  persistent_risk_region_tracker.cpp  reference_manager.cpp  region_correspondence_solver.cpp  region_hypothesis_builder.cpp  risk_evidence_adapter.cpp  risk_field_builder.cpp  scalar_measurement_builder.cpp  structure_unit_builder.cpp  structure_unit_tracker.cpp
deform_monitor_v2/test/: test_ablation_switches.cpp  test_analyze_sim_run.py  test_default_paths.py  test_export_evo_report.py  test_launch_output_root.py  test_sim_experiment_recorder.py  test_sim_truth_rviz_bridge.py  test_world_static_state.py
docs/: demo_video.html
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/: CMakeLists.txt  package.xml
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/launch/: debris_block_02_motion.launch  mid360_fastlio.launch
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/models/livox_mid360/: model.config  model.sdf
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/models/mid360_fastlio/: model.config  model.sdf
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/models/tracked_mid360/: model.config  model.sdf
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/scripts/: circle_cmd.py  keyboard_cmd.py  model_motion_controller.py  spawn_or_replace_model.py  work_patrol_cmd.py
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/src/: livox_points_plugin.cpp
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/test/: test_model_motion_controller.py  test_work_patrol_cmd.py  test_work_patrol_launch.py
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/urdf/: mid360_fastlio.urdf.xacro
gazebo_test/Mid360_simulation_plugin/livox_laser_simulation/worlds/: tracked_mid360_fastlio.world  tracked_mid360_fastlio_collapse_microdeform.world  tracked_mid360_fastlio_collapse_wood_room_v1.world
livox_ros_driver/launch/: Robot_mapping.launch  livox_lidar.launch
livox_ros_driver/livox_ros_driver/: lddc.cpp  livox_ros_driver.cpp
