<?xml version="1.0"?>
<package format="2">
  <name>deform_monitor_v2</name>
  <version>0.1.0</version>
  <description>Anchor-based micro-motion monitoring on top of FAST-LIO outputs</description>

  <maintainer email="zgliu@cumt.edu.cn">zgliu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>fast_lio</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>
  <depend>libboost-all-dev</depend>

  <export>
  </export>
</package>
